--- a/doc/功能说明文档.md
+++ b/doc/功能说明文档.md
@@ -25,15 +25,19 @@ typora-copy-images-to: doc
 | 快速配置页面   | 包含wifi配置、服务器连接设置、重启网关                       | /setup                |
 | 高级配置页面   | 包含修改管理密码、修改网关地址、系统升级、时间设置、恢复出厂设置、射频设置和日志查询 | /setup                |
 | wifi配置       | 配置wifi热点的ssid和密码                                     | /wifi                 |
-| 服务器连接设置 | 配置服务端ip和端口。连接方式：wifi或以太网。wifi连接方式下的ssid和密码 | /server               |
+| 服务器连接设置 | 配置服务端ip和端口。                                         | /server               |
 | 重启网关       | 重启网关                                                     | /restart              |
 | 修改管理密码   | 修改登录页密码，默认密码为admin                              | /auth                 |
+| 修改网关地址   | 修改网关地址                                                 | /gateway/id           |
 | 系统升级       | 升级网关应用程序                                             | /gateway/upgrade      |
 | 时间设置       | 使用客户端时间或手动输入对网关进行校时                       | /gateway/upgrade/time |
 | 恢复出厂设置   | 恢复出厂设置                                                 | /gateway/restore      |
-| 射频设置       | 获取当前射频频点、调制方式、带宽、射频波特率；配置唤醒周期（分钟）、重发次数（次）、延时等待时间（秒）和收发模式（只收、只发、自动） | /radio/update         |
+| 射频设置       | 获取当前射频频点、调制方式、带宽、射频波特率；配置唤醒周期（秒）、重发次数（次）、延时等待时间（秒）和收发模式（只收、只发、自动） | /radio/update         |
 | 射频模块重启   | 重启射频模块                                                 | /radio/restart        |
 | 日志查询       | 查询epd业务运行日志                                          | /log                  |
+| 状态查询       | 查询网关网络连接状态、任务运行状态                           | /status               |
+
+
 
 
 
@@ -127,6 +131,6 @@ typora-copy-images-to: doc
 
 * ## 网关校时
 
-* 网关校时有两种方式。一种是使用服务端开启NTP服务，网关定期从NTP服务器获取时间。另一种是从本地web页面获取客户端系统时间，或手动设置。
+* 网关校时有两种方式。一种是使用Http向服务器请求时间。另一种是从本地web页面获取客户端系统时间，或手动设置。
 
 * 
